* Add cardinality option to Index Usage
* Allow configuring TinyMCE license key
* Add tools to apply types to SQLite select queries
* Compress RPC responses
* Change _changed_values and _save_values properties to method
* Add configuration for report convert command
* Use process pool to run cron
* Lock only running cron record
* Add option to skip tests that require network
* Add language support per field in export data
* Add translated descriptor for Char and Text fields
* Include row and column in error message when importing data
* Remove support for ``:id`` suffix in import data
* Add export translations option to trytond-admin
* Update TinyMCE to version 7
* Add python-format flag to PO files
* Add partial support for constraints with SQLite backend

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Do not accept compressed content from unauthenticated request (#13142)
* Set loading eager to visible xxx2many on form view
* Add loading attribute to form view
* Add a contextual read limit on Model.read
* Add a contextual read limit for related fields
* Add xml_id field on ModelStorage
* Add send_message methods
* Store model on ir.rule.group
* Store model on ir.model.button
* Store model and field name on ir.model.field.access
* Store model name on ir.model.access
* Store model name on ir.model.field
* Add fmany2one field
* Allow creation of foreign key on non primary key
* Include context information in access error
* Remove trytond-worker max tasks per child option for Python <= 3.10
* Do not copy readonly relational fields
* Support list of single value in sortable_values tools
* Allow resetting password of user via RPC
* Support cached_property on object with __slots__
* Allow creating indexes concurrently
* Allow skipping index creation
* Add assert methods to test tools
* Set ELLIPSIS option flag on doctest
* Set IGNORE_EXCEPTION_DETAIL option flag on doctest
* Add timeout parameter on RPC definitions
